--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ form.search button{
 }
 .movie-card{
   position: relative;
+  cursor: pointer;
 }
 .movie-card label{
   position: absolute;
@@ -135,13 +136,26 @@ form.search button{
   background: #fac414;
   font-size: 20px;
   padding-left: 5px;
+  z-index: 1;
+
 }
-.movie-card span{
+.movie-img{
+  opacity: .8;
+}
+.movie-img:hover{
+  opacity: 0.4;
+}
+.movie-card span {
   position: absolute;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  left: 50%;
   bottom: 10px;
-  left: 0;
+  transform: translateX(-50%);
   text-align: center;
   color: #ffffff;
+  
 }
 .poster-grid {
   display: grid;
