--- a/src/App.css
+++ b/src/App.css
@@ -142,9 +142,13 @@ form.search button{
 .movie-img{
   opacity: .8;
 }
-.movie-img:hover{
+.movie-card:hover .movie-img{
   opacity: 0.4;
 }
+.movie-card:hover .play-logo{
+  visibility: visible;
+}
+
 .movie-card span {
   position: absolute;
   font-family: "Bebas Neue", sans-serif;
@@ -157,6 +161,17 @@ form.search button{
   color: #ffffff;
   
 }
+.play-logo{
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  visibility: hidden;
+
+}
+
 .poster-grid {
   display: grid;
   grid-template-columns: repeat(8, 1fr); 
@@ -165,8 +180,7 @@ form.search button{
 
 .footer{
   width: 80%;
-  margin: auto;
-  margin-top: 50px;
+  margin: 50px auto;
   color: #9e9e9e;
   display: flex;
   justify-content: space-between;
