--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,19 @@ form.search button{
   line-height: 1.5rem;
   padding-left: 15px;
 }
+.watchBtn{
+  width: 300px;
+  margin: auto;
+  margin-top: 30px;
+}
+.watchBtn button{
+  background: #08ac4b;
+  width: 180px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  color: white;
+}
 
 .bottom-section{
   background-color: #252525;
