--- a/src/App.css
+++ b/src/App.css
@@ -92,13 +92,60 @@ form.search button{
   border-radius: 5px;
   cursor: pointer;
 }
+.search-suggestion{
+  width: 270px;
+  position: relative;
+  color: white;
 
+}
+.search-suggestion ul{
+  display: block;
+  z-index: 3;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  width: 100%;
+  background-color: #2e2e2e;
+  
+}
+.search-suggestion ul li{
+  width: 100%;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+.search-suggestion ul li:hover{
+  background-color: #414040;
+}
+.searched-movie{
+  padding: 10px 0 10px 5px;
+  display: flex;
+  border-bottom: 1px solid #5c5a5a;
+}
+.searched-movie .movie-poster{
+  width: 55px;
+  height: 70px;
+  margin-right: 15px;
+}
+.movie-poster img{
+  width: 100%;
+  height: 100%;
+}
+.searched-movie .movie-title{
+  margin: 5px 0 15px 0;
+}
+.searched-movie .movie-detail{
+  margin-top: 18px;
+  font-size: 11px;
+  color: #a0a0a0;
+}
 .movie-list{
   width: 80%;
   margin: auto;
   color: white;
   margin-top: 90px;
 }
+
 .topic {
   display: flex;
   margin-bottom: 50px;
@@ -175,7 +222,7 @@ form.search button{
 
 .poster-grid {
   display: grid;
-  grid-template-columns: repeat(8, 1fr); 
+  grid-template-columns: repeat(7, 1fr); 
   grid-gap: 20px; 
 }
 
@@ -250,8 +297,6 @@ form.search button{
   align-items: center;
 
 }
-
-
 .middle-section{
   position: absolute;
   padding: 5px;
@@ -305,6 +350,7 @@ form.search button{
   border-radius: 5px;
   border: none;
   color: white;
+  cursor: pointer;
 }
 
 .bottom-section{
@@ -327,9 +373,31 @@ form.search button{
   padding: 5px;
   margin: 0 10px;
   text-align: center;
-  background-color: #08ac4b;
   color: white;
 }
+.bottom-section ul li:hover{
+  transform: translateY(-5px);
+  transition: ease-in-out 0.2s;
+}
+.facebook{
+  background-color: #1059b9;
+}
+.twitter{
+  background-color: #111111
+}
+.whatsapp{
+  background-color: #1cee00;
+}
+.messanger{
+  background-color: #10a3f8;
+}
+.telegram{
+  background-color: #0b81c5;
+}
+.reddit{
+  background-color: #df360c;
+}
+
 .intro-section{
   width: 80%;
   margin: 100px auto;
@@ -340,4 +408,168 @@ form.search button{
 .intro-section p{
   font-size: 17px;
   margin-bottom: 40px;
+}
+.link{
+  color: white;
+  text-decoration: none;
+}
+.link:hover{
+  color: #08ac4b;
+}
+.stream-contanier{
+  width: 70%;
+  margin: auto;
+  
+  background-color: #1f1e1e;
+}
+.streamer .title{
+  width: 70%;
+  margin: auto;
+  margin-top: 30px;
+}
+.streamer .title{
+  margin-bottom: 20px;
+  color: white;
+  font-size: 16px;
+}
+.streamer .links{
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+.streamer .links:hover{
+  color: #08ac4b;
+}
+.top-section img{
+  width: 100%;
+  height: 60vh;
+}
+.top-section .play-logo{
+  width: 80px;
+  height: 70px;
+  top: 45%;
+  left: 50%;
+  visibility: visible;
+}
+.top-section .play-logo:hover{
+  width: 90px;
+  height: 80px;
+}
+.middle-row{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 200px;
+  color: white;
+}
+.middle-col-poster{
+  position: absolute;
+  display: block;
+  top: 26px;
+  left: 20px;
+  width: 140px;
+  height: 200px;
+}
+.middle-col-poster img{
+  width: 100%;
+  height: 100%;
+}
+.trailer-button{
+  display: block;
+}
+.tr-btn{
+  padding: 5px 10px;
+  margin-right: 10px;
+  border: 1px solid #10a3f8;
+  border-radius: 5px;
+  background-color: #10a3f8;
+  cursor: pointer;
+}
+.ql-btn{
+  padding: 5px 10px;
+  margin-top: 5px;
+  margin-right: 20px;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: black;
+  cursor: pointer;
+}
+.imdb{
+  color: orange;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.middle-col-right{
+  display: block;
+  width: 300px;
+  position: absolute;
+  top: 14px;
+  right:2px;
+  padding-top: 30px;
+}
+.middle-col-right .watch-nowbtn{
+  width: 250px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #08ac4b;
+  color: white;
+  font-size: 20px;
+  border: 2px solid #08ac4b;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.middle-col-right .favorite-btn{
+  width: 250px;
+  padding: 10px;
+  font-size: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.movie-title{
+  margin-top: 1rem;
+  margin-bottom: 20px;
+}
+.description{
+  padding-top: 10px;
+  width: 70%;
+  margin-top: 10px;
+  color: #838181;
+  font-size: 16px;
+}
+.elements-row{
+  position: relative;
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-size: 16px;
+}
+.elements-col{
+  margin-right: 60px;
+}
+.elements-col ul{
+  list-style: none;
+  line-height: 25px;
+}
+.clearfix::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.similar-poster-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); 
+  grid-gap: 20px; 
+}
+.similar-movie-list{
+  width: 70%;
+  margin: auto;
+  color: white;
+  margin-top: 90px;
+}
+.similar-movie-list button{
+  width: 200px;
+  font-size: 20px;
 }
