--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body{
 
 .header{
   background-color: #1b1b1b;
+  position: relative;
 }
 .container{
   display: flex;
@@ -67,6 +68,24 @@ body{
 }
 .list ul li:hover{
   color: #08ac4b;
+}
+.genre-container{
+  width: auto;
+  height: auto;
+  padding-bottom: 20px;
+  z-index: 10;
+  position: absolute;
+  top: 55px;
+  left: 500px;
+  color: white;
+  background-color: #2e2e2e;
+  border-radius: 5px;
+  padding: 10px;
+}
+.genre-container ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 20px;
 }
 form.search input{
   width: 260px;
@@ -151,9 +170,9 @@ form.search button{
   margin-bottom: 50px;
 }
 .topic button{
-  padding: 5px;
-  width: 130px;
-  height: 40px;
+  padding: 5px 20px;
+  width: auto;
+  height: 50px;
   background: #08ac4b;
   color: white;
   border: none;
@@ -174,18 +193,32 @@ form.search button{
   position: relative;
   cursor: pointer;
 }
-.movie-card label{
+.movie-card .quality{
   position: absolute;
-  width: 35px;
-  height: 25px;
-  top: 5px;
-  left: 10px;
+  width: 25px;
+  height: 20px;
+  top: 13px;
+  left: 8px;
   color: black;
   background: #fac414;
-  font-size: 20px;
+  font-size: 15px;
   padding-left: 5px;
+  z-index: 6;
+}
+.movie-card .eps{
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  top: 8px;
+  right: 28px;
+  background: #08ac4b;
+  font-size: 15px;
+  padding: 5px;
   z-index: 1;
-
+  color: white;
+  text-align: center;
+  align-items: center;
 }
 .movie-img{
   opacity: .8;
@@ -228,11 +261,14 @@ form.search button{
 
 .footer{
   width: 80%;
-  margin: 50px auto;
+  margin: 40px auto;
   color: #9e9e9e;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 250px;
 }
 .footer-col{
   width: 40%;
@@ -261,6 +297,7 @@ form.search button{
   width: 80%;
   margin: auto;
   height: 50vh;
+  cursor: pointer;
 }
 
 .swiper {
